CLI Component [wip]

--- a/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/summary/summary.html
+++ b/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/summary/summary.html
@@ -503,5 +503,11 @@
                   formControlName="cliCommand"></textarea>
       </div>
     </div>
+
+    <!-- CLI Command component -->
+    <vic-cli-command [payload]="cliPayload.asObservable()"
+                     [commandType]="'create'"
+                     [showCliCommand]="true">
+    </vic-cli-command>
   </section>
 </form>
