Configure VCH View [Wip]

--- a/h5c/vic/src/vic-webapp/src/app/configure-vch-view/configure-vch-view.component.html
+++ b/h5c/vic/src/vic-webapp/src/app/configure-vch-view/configure-vch-view.component.html
@@ -12,7 +12,7 @@
     <button clrTabLink>General</button>
     <clr-tab-content *clrIfActive>
 
-      <clr-stack-view class="mt-2">
+      <clr-stack-view class="configure-stack">
         <clr-stack-block>
           <clr-stack-label>VCH Name</clr-stack-label>
           <clr-stack-content>virtual-container-host</clr-stack-content>
