--- a/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-view/configure-vch-view.component.scss
+++ b/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-view/configure-vch-view.component.scss
@@ -14,6 +14,15 @@
  limitations under the License.
 */
 
-.configure-stack {
-  margin-top: 40px;
+.configure-loading-wrapper {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.configure-loading-wrapper span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
