--- a/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-modal/configure-vch-modal.component.html
+++ b/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-modal/configure-vch-modal.component.html
@@ -10,7 +10,8 @@
     <div class="modal-body">
       <div class="clr-wizard-content">
         <div class="clr-wizard-page pt-0">
-          <vic-configure-tabs *ngIf="vchInfo | async as vch; else loadingVchInfo"
+          <vic-configure-tabs #tabsComponent
+                              *ngIf="vchInfo | async as vch; else loadingVchInfo"
                               [readOnly]="false"
                               [model]="vch"
                               (modelChanged)="modelChanged($event)">
@@ -31,7 +32,7 @@
 
       <div class="clr-wizard-footer-buttons">
         <button class="btn btn-outline" type="button" (click)="onCancel()">Cancel</button>
-        <button class="btn btn-default" type="button" (click)="onSave()">Save</button>
+        <button class="btn btn-primary" type="button" [disabled]="currentFormIsInvalid()" (click)="onSave()">Save</button>
       </div>
     </div>
 
