Configure VCH View [Wip]

--- a/h5c/vic/src/vic-webapp/src/app/shared/components/cli-command/cli-command.component.html
+++ b/h5c/vic/src/vic-webapp/src/app/shared/components/cli-command/cli-command.component.html
@@ -15,9 +15,12 @@
       </div>
     </div>
     <div class="col-xs-5">
-      <clr-icon class="cursor-pointer"
-                shape="copy"
-                (click)="copyCliCommand()"></clr-icon>
+      <button class="btn btn-link btn-copy" [disabled]="disabled" (click)="copyCliCommand()">
+        <clr-icon shape="copy"></clr-icon>
+      </button>
+      <!--<button class="btn btn-link" [disabled]="disabled" (click)="copyCliCommand()">
+        <clr-icon class="cursor-pointer" shape="copy"></clr-icon>
+      </button>-->
     </div>
   </div>
   <!-- Copy Success Indicator-->
