--- a/h5c/vic/src/vic-webapp/src/app/shared/components/cli-command/cli-command.component.scss
+++ b/h5c/vic/src/vic-webapp/src/app/shared/components/cli-command/cli-command.component.scss
@@ -11,3 +11,10 @@ textarea#cliCommand {
   font-size: 0.9em;
   margin-top: 10px;
 }
+
+.btn-copy {
+  margin-left: 0px;
+  color: #9a9a9a;
+  line-height: 0px!important;
+  height: 1rem!important;;
+}
