--- a/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-modal/configure-vch-modal.component.html
+++ b/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-modal/configure-vch-modal.component.html
@@ -14,7 +14,8 @@
                               *ngIf="vchInfo | async as vch; else loadingVchInfo"
                               [readOnly]="false"
                               [model]="vch"
-                              (modelChanged)="modelChanged($event)">
+                              (modelChanged)="modelChanged($event)"
+                              (tabFocus)="onTabFocus($event)">
           </vic-configure-tabs>
         </div>
       </div>
@@ -24,6 +25,7 @@
       <!-- CLI Command -->
       <div class="wizzard-cli-container">
         <vic-cli-command *ngIf="showCli"
+                         [disabled]="isCurrentTabInvalid()"
                          [payload]="modelPayload.asObservable()"
                          [commandType]="'configure'"
                          [showCliCommand]="false">
@@ -32,7 +34,7 @@
 
       <div class="clr-wizard-footer-buttons">
         <button class="btn btn-outline" type="button" (click)="onCancel()">Cancel</button>
-        <button class="btn btn-primary" type="button" [disabled]="currentFormIsInvalid()" (click)="onSave()">Save</button>
+        <button class="btn btn-primary" type="button" [disabled]="isCurrentTabInvalid()" (click)="onSave()">Save</button>
       </div>
     </div>
 
