--- a/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-view/configure-vch-view.component.scss
+++ b/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-view/configure-vch-view.component.scss
@@ -1,5 +1,5 @@
 /*
- Copyright 2017 VMware, Inc. All Rights Reserved.
+ Copyright 2018 VMware, Inc. All Rights Reserved.
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -14,10 +14,15 @@
  limitations under the License.
 */
 
-export * from './resources.path';
-export * from './portlets.text';
-export * from './vicvms';
-export * from './create-vch-wizard';
-export * from './configure-vch-modal';
-export * from './delete-vch-modal';
-export * from './nodetype';
+.configure-loading-wrapper {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.configure-loading-wrapper span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
