--- a/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-view/network/configure-vch-view-network.component.html
+++ b/h5c/vic/src/vic-webapp/src/app/configure/configure-vch-view/network/configure-vch-view-network.component.html
@@ -1,1 +1,14 @@
-Network
+<ng-container *ngIf="vchInfo | async as vchUIModel; else loadingContent">
+  <vic-configure-vch-view-container [title]="'Network'"
+                                    [vchUiModelKey]="'network'"
+                                    [vchId]="vchId">
+    <vic-vch-network [readOnly]="true"
+                     [model]="vchUIModel.network">
+    </vic-vch-network>
+  </vic-configure-vch-view-container>
+</ng-container>
+<ng-template #loadingContent>
+        <span class="spinner spinner-md">
+          Loading...
+        </span>
+</ng-template>
