--- a/h5c/vic/src/vic-webapp/src/styles.scss
+++ b/h5c/vic/src/vic-webapp/src/styles.scss
@@ -15,3 +15,9 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+/* Fixes issue with clr-stack-block when some row bottom borders are not visible */
+.stack-view .stack-block .stack-block,
+.stack-view .stack-block {
+  min-height: 37px;
+}
