--- a/h5c/vic/src/vic-webapp/src/app/shared/components/vch-storage/vch-storage.component.html
+++ b/h5c/vic/src/vic-webapp/src/app/shared/components/vch-storage/vch-storage.component.html
@@ -2,24 +2,24 @@
 <div *ngIf="readOnly; else formContent">
   <clr-stack-view class="mt-2">
     <clr-stack-block>
-      <clr-stack-label>Image datastore</clr-stack-label>
+      <clr-stack-label>{{ i18n.translate('vch.storage.imageDataStore') }}</clr-stack-label>
       <clr-stack-content>{{model.imageStore}}</clr-stack-content>
     </clr-stack-block>
     <clr-stack-block>
-      <clr-stack-label>File folder</clr-stack-label>
+      <clr-stack-label>{{ i18n.translate('vch.storage.fileFolder') }}</clr-stack-label>
       <clr-stack-content>{{model.fileFolder}}</clr-stack-content>
     </clr-stack-block>
     <clr-stack-block>
-      <clr-stack-label>Maximum Container VM image size</clr-stack-label>
+      <clr-stack-label>{{ i18n.translate('vch.storage.maxContainerVmImageSize') }}</clr-stack-label>
       <clr-stack-content>{{model.baseImageSize || '-'}} {{model.baseImageSizeUnit || 'GiB / MiB'}}</clr-stack-content>
     </clr-stack-block>
   </clr-stack-view>
 
-  <h4>Volume datastores</h4>
+  <h4>{{ i18n.translate('vch.storage.volumeDatastores') }}</h4>
   <clr-datagrid>
-    <clr-dg-column>Datastore</clr-dg-column>
-    <clr-dg-column>Folder</clr-dg-column>
-    <clr-dg-column>Volume store name</clr-dg-column>
+    <clr-dg-column>{{ i18n.translate('vch.storage.datastore') }}</clr-dg-column>
+    <clr-dg-column>{{ i18n.translate('vch.storage.folder') }}</clr-dg-column>
+    <clr-dg-column>{{ i18n.translate('vch.storage.volumeStoreName') }}</clr-dg-column>
 
     <clr-dg-row *clrDgItems="let vol of model.volumeStore">
       <clr-dg-cell>{{vol.volDatastore}}</clr-dg-cell>
@@ -30,7 +30,7 @@
     <clr-dg-footer>
       <clr-dg-pagination #pagination [clrDgPageSize]="10">
         {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}}
-        of {{pagination.totalItems}} volumes
+        {{ i18n.translate('vch.storage.of') }} {{pagination.totalItems}} {{ i18n.translate('vch.storage.volumes') }}
       </clr-dg-pagination>
     </clr-dg-footer>
   </clr-datagrid>
@@ -45,18 +45,18 @@
     <section class="form-block my-0"  id='storage-capacity'>
 
       <label>
-        Image Datastore
+        {{ i18n.translate('vch.storage.imageDataStore') }}
       </label>
 
       <p class="mt-0 mb-2">
-        Select the image datastore to be used to hold container images and an optional folder.
+        {{ i18n.translate('vch.storage.subTitle') }}
       </p>
 
       <div class="form-group row">
         <div class="col-xs-3">
 
           <label class="required" for="image-store-selector">
-            Datastore {{model.imageStore}}
+            {{ i18n.translate('vch.storage.datastore') }} {{model.imageStore}}
           </label>
 
         </div>
@@ -64,9 +64,9 @@
 
           <div class="select form-control">
             <select id="image-store-selector" formControlName="imageStore">
-              <option value="">Not selected</option>
+              <option value="">{{ i18n.translate('vch.storage.notSelected') }}</option>
               <option [value]="datastore.name" *ngFor="let datastore of datastores; trackBy: datastoreTrackByFn">
-                {{ datastore.name }} ({{ datastore?.info?.freeSpace }} free)
+                {{ datastore.name }} ({{ datastore?.info?.freeSpace }} {{ i18n.translate('vch.storage.free') }})
               </option>
             </select>
           </div>
@@ -78,7 +78,7 @@
         <div class="col-xs-3">
 
           <label for="file-folder-selector">
-            File folder
+            {{ i18n.translate('vch.storage.fileFolder') }}
           </label>
 
         </div>
@@ -97,8 +97,8 @@
         <div class="col-xs-3">
 
           <label class="image-size-label">
-            Max Container VM<br>
-            image size
+            {{ i18n.translate('vch.storage.maxContainerVm') }}<br>
+            {{ i18n.translate('vch.storage.imageSize') }}
           </label>
 
         </div>
@@ -116,15 +116,15 @@
                    class="form-control">
 
             <span class="tooltip-content" *ngIf="form.get('baseImageSize').hasError('required')">
-            Base image size cannot be empty
+              {{ i18n.translate('vch.storage.imageSizeEmptyTooltip') }}
           </span>
 
             <span class="tooltip-content" *ngIf="form.get('baseImageSize').hasError('pattern')">
-            Base image size should be numeric
+              {{ i18n.translate('vch.storage.imageSizeNumericTooltip') }}
           </span>
 
             <small class="text-muted text-nowrap">
-              This limit cannot be changed after deploying the VCH
+              {{ i18n.translate('vch.storage.limitInfo') }}
             </small>
 
           </label>
@@ -144,8 +144,7 @@
         <clr-signpost>
           <clr-signpost-content [clrPosition]="'top-left'" *clrIfOpen>
           <span>
-            The size of the base image from which to create other images. You do not normally need to change this value.
-            The default size is 8GB, but images are thin-provisioned so they do not usually consume 8GB of space.
+            {{ i18n.translate('vch.storage.imageSizeInfo') }}
           </span>
           </clr-signpost-content>
         </clr-signpost>
@@ -157,18 +156,18 @@
     <section class="form-block">
 
       <label>
-        Volume Datastores
+        {{ i18n.translate('vch.storage.volumeDatastores') }}
       </label>
 
       <p class="mt-0">
-        Make selected datastores available for docker volumes
+        {{ i18n.translate('vch.storage.volumeDatastoresSubtitle') }}
       </p>
 
       <div class="form-group row mb-2">
         <div class="col-xs">
           <div class="toggle-switch">
             <input type="checkbox" id="enable-anonymous-volumes" formControlName="enableAnonymousVolumes">
-            <label for="enable-anonymous-volumes">Enable anonymous volumes</label>
+            <label for="enable-anonymous-volumes">{{ i18n.translate('vch.storage.enableAnonymousVolumes') }}</label>
           </div>
         </div>
       </div>
@@ -181,18 +180,18 @@
           <div class="col-xs-3">
 
             <label [ngClass]="{'required': form.get('enableAnonymousVolumes').value && i === 0}">
-              Volume datastore
+              {{ i18n.translate('vch.storage.volumeDatastore') }}
             </label>
 
           </div>
           <div class="col-xs-3">
 
-            <small class="vol-datastore-header" *ngIf="i === 0">Datastore</small>
+            <small class="vol-datastore-header" *ngIf="i === 0">{{ i18n.translate('vch.storage.datastore') }}</small>
             <div class="select form-control">
               <select formControlName="volDatastore">
-                <option value="">Not selected</option>
+                <option value="">{{ i18n.translate('vch.storage.notSelected') }}</option>
                 <option [value]="datastore.name" *ngFor="let datastore of datastores">
-                  {{ datastore.name }} ({{ datastore?.info?.freeSpace }} free)
+                  {{ datastore.name }} ({{ datastore?.info?.freeSpace }} {{ i18n.translate('vch.storage.free') }})
                 </option>
               </select>
             </div>
@@ -200,7 +199,7 @@
           </div>
           <div class="col-xs-3">
 
-            <small class="vol-datastore-header" *ngIf="i === 0">Folder</small>
+            <small class="vol-datastore-header" *ngIf="i === 0">{{ i18n.translate('vch.storage.folder') }}</small>
             <input class="form-control"
                    type="text"
                    placeholder="Optional folder name"
@@ -209,7 +208,7 @@
           </div>
           <div class="col-xs">
 
-            <small class="vol-datastore-header" *ngIf="i === 0">Volume store name</small>
+            <small class="vol-datastore-header" *ngIf="i === 0">{{ i18n.translate('vch.storage.volumeStoreName') }}</small>
             <label class="form-control tooltip tooltip-validation tooltip-md tooltip-top-left"
                    for="docker-volname-selector"
                    aria-haspopup="true"
@@ -224,11 +223,11 @@
                      formControlName="dockerVolName">
 
               <span class="tooltip-content" *ngIf="form.get('volumeStore').controls[i].controls['dockerVolName'].hasError('required')">
-              Docker volume name cannot be empty or contain blank spaces
+              {{ i18n.translate('vch.storage.dockerVolNameEmptyTooltip') }}
             </span>
 
               <span class="tooltip-content" *ngIf="form.get('volumeStore').controls[i].controls['dockerVolName'].hasError('pattern')">
-              Docker volume name contains characters that are not allowed
+              {{ i18n.translate('vch.storage.dockerVolNameCharsTooltip') }}
             </span>
 
             </label>
