--- a/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/compute-capacity/compute-capacity.html
+++ b/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/compute-capacity/compute-capacity.html
@@ -6,45 +6,34 @@
 <form [formGroup]="form"
       novalidate>
   <section class="form-block mb-0" id='compute-capacity'>
-
     <div class="form-group row">
       <div class="col-xs-4">
-
         <label class="required">
           Compute resource
         </label>
-
       </div>
+
+      <!-- COMPUTE RESOURCE SELECTOR -->
       <div class="col-xs-6" id="compute-resource-selector">
         <ng-container>
+          <!-- VC NODE -->
           <clr-tree-node class="form-control rootNode" *ngFor="let serverInfo of serversInfo">
             <button #btnEl class="clr-treenode-link cc-resource">
               <clr-icon shape="block"></clr-icon>
                 {{ serverInfo['name'] }}
             </button>
             <ng-template [clrIfExpanded]="true">
-              <ng-container *ngFor="let dc of datacenter">
-                <clr-tree-node class="form-control"
-                               [class.invalid]="form.invalid && form.getError('invalidComputeResource')"
-                               [clrLoading]="isTreeLoading"
-                               *ngIf="dc.objRef.indexOf(serverInfo.serviceGuid) > -1">
-                    <button class="clr-treenode-link">
-                      <clr-icon shape="building"></clr-icon>
-                      {{ dc.text }}
-                    </button>
-                    <ng-template [clrIfExpanded]="true">
-                      <vic-compute-resource-treenode #crTreenode
-                                                      [serverInfo]="serverInfo"
-                                                      [datacenter]="dc"
-                                                      (resourceSelected)="selectComputeResource($event)">
-                      </vic-compute-resource-treenode>
-                    </ng-template>
-                </clr-tree-node>
-              </ng-container>
+              <!-- TREE NODES FOR EACH VC -->
+              <vic-compute-resource-treenode #crTreenode
+                                             [serverInfo]="serverInfo"
+                                             (resourceSelected)="selectComputeResource($event)">
+              </vic-compute-resource-treenode>
             </ng-template>
           </clr-tree-node>
         </ng-container>
       </div>
+      <!-- COMPUTE RESOURCE SELECTOR -->
+
     </div>
 
     <label>
