--- a/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/compute-capacity/compute-resource-treenode.template.html
+++ b/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/compute-capacity/compute-resource-treenode.template.html
@@ -1,32 +1,42 @@
 <!-- Copyright 2017-2018 VMware, Inc. All Rights Reserved. -->
-<!-- cluster and clusterhostsystems -->
-  <ng-container *ngFor="let cluster of clusters">
-      <clr-tree-node *ngIf="!cluster.isEmpty" [clrLoading]="loading">
+<ng-container *ngIf="resourcesTree | async as tree; else treeLoader">
+
+  <!-- template -->
+  <ng-template #recursiveList let-items>
+    <ng-template [clrIfExpanded]="true"
+                 *ngIf="items.length > 0">
+      <clr-tree-node *ngFor="let item of items"
+                     class="form-control"
+                     [ngSwitch]="item.nodeTypeId">
         <button #btnEl
                 class="clr-treenode-link cc-resource"
-                (click)="selectResource($event, cluster)">
-          <clr-icon shape="cluster"></clr-icon>
-          {{ cluster['text'] }}
+                (click)="selectResource($event, item)">
+          <clr-icon shape="building" *ngSwitchCase="'Datacenter'"></clr-icon>
+          <clr-icon shape="folder" *ngSwitchCase="'DcCompResFolder'"></clr-icon>
+          <clr-icon shape="folder" *ngSwitchCase="'CompResFolderCompResFolder'"></clr-icon>
+          <clr-icon shape="cluster" *ngSwitchCase="'CompResFolderCluster'"></clr-icon>
+          <clr-icon shape="cluster" *ngSwitchCase="'DcCluster'"></clr-icon>
+          <clr-icon shape="host" *ngSwitchCase="'ClusterHostSystem'"></clr-icon>
+          <clr-icon shape="host" *ngSwitchCase="'DcStandaloneHost'"></clr-icon>
+          <clr-icon shape="resource-pool" *ngSwitchCase="'StandaloneHostResPool'"></clr-icon>
+          {{ item.text }}
         </button>
-
-        <ng-template [clrIfExpanded]="false">
-          <ng-container>
-            <clr-tree-node *ngFor="let clHost of clusterHostSystemsMap[cluster.objRef]">
-              <button #btnEl class="clr-treenode-link cc-resource">
-                <clr-icon shape="host"></clr-icon>
-                {{ clHost['text'] }}
-              </button>
-            </clr-tree-node>
-          </ng-container>
+        <!-- childs -->
+        <ng-template [clrIfExpanded]="true">
+          <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: item['childrens'] }"></ng-container>
         </ng-template>
       </clr-tree-node>
-  </ng-container>
+    </ng-template>
+  </ng-template>
 
-  <!-- standalone hosts -->
-  <clr-tree-node *ngFor="let host of standaloneHosts">
-    <button #btnEl class="clr-treenode-link cc-resource"
-            (click)="selectResource($event, host)">
-      <clr-icon shape="host"></clr-icon>
-      {{ host['text'] }}
-    </button>
-  </clr-tree-node>
+  <!-- content -->
+  <ng-container *ngTemplateOutlet="recursiveList; context:{ $implicit: tree['childrens'] }"></ng-container>
+
+</ng-container>
+
+<!-- loader -->
+<ng-template #treeLoader>
+  <div class="spinner-wrapper">
+    <span class="spinner spinner-sm"></span>
+  </div>
+</ng-template>
