--- a/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/compute-capacity/compute-resource-treenode.template.html
+++ b/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/compute-capacity/compute-resource-treenode.template.html
@@ -11,14 +11,18 @@
         <button #btnEl
                 class="clr-treenode-link cc-resource"
                 (click)="selectResource($event, item)">
-          <clr-icon shape="building" *ngSwitchCase="'Datacenter'"></clr-icon>
-          <clr-icon shape="folder" *ngSwitchCase="'DcCompResFolder'"></clr-icon>
-          <clr-icon shape="folder" *ngSwitchCase="'CompResFolderCompResFolder'"></clr-icon>
-          <clr-icon shape="cluster" *ngSwitchCase="'CompResFolderCluster'"></clr-icon>
-          <clr-icon shape="cluster" *ngSwitchCase="'DcCluster'"></clr-icon>
-          <clr-icon shape="host" *ngSwitchCase="'ClusterHostSystem'"></clr-icon>
-          <clr-icon shape="host" *ngSwitchCase="'DcStandaloneHost'"></clr-icon>
-          <clr-icon shape="resource-pool" *ngSwitchCase="'StandaloneHostResPool'"></clr-icon>
+          <clr-icon shape="building" *ngSwitchCase="CR_TYPES.dc.dc"></clr-icon>
+          <clr-icon shape="folder" *ngSwitchCase="CR_TYPES.folder.dc_folder"></clr-icon>
+          <clr-icon shape="folder" *ngSwitchCase="CR_TYPES.folder.comp_res_folder"></clr-icon>
+          <clr-icon shape="cluster" *ngSwitchCase="CR_TYPES.cluster.folder_cluster"></clr-icon>
+          <clr-icon shape="cluster" *ngSwitchCase="CR_TYPES.cluster.dc_cluster"></clr-icon>
+          <clr-icon shape="host" *ngSwitchCase="CR_TYPES.host.cluster_host"></clr-icon>
+          <clr-icon shape="host" *ngSwitchCase="CR_TYPES.host.dc_stand_alone"></clr-icon>
+          <clr-icon shape="resource-pool" *ngSwitchCase="CR_TYPES.resource_pool.resource_pool"></clr-icon>
+          <clr-icon shape="resource-pool" *ngSwitchCase="CR_TYPES.resource_pool.host_resource_pool"></clr-icon>
+          <clr-icon shape="resource-pool" *ngSwitchCase="CR_TYPES.resource_pool.cluster_resource_pool"></clr-icon>
+          <clr-icon shape="resource-pool" *ngSwitchCase="CR_TYPES.resource_pool.resource_pool_resource_pool"></clr-icon>
+          <clr-icon shape="resource-pool" *ngSwitchCase="CR_TYPES.resource_pool.vic_vch_resource_pool"></clr-icon>
           {{ item.text }}
         </button>
         <!-- childs -->
